got done with index frontend and made solid progress in about page

--- a/templates/index/_counter.html
+++ b/templates/index/_counter.html
@@ -13,9 +13,9 @@
                 </svg>                  
               </div>
               <div class="counter--content-percent">
-                <h2> $<span class="counter--content-number">150</span>+ </h2>
+                <h2> $<span class="counter--content-number">2,500</span>+ </h2>
               </div>
-              <p class="bold">Owned from <br> Properties transactions</p>
+              <p class="bold">Capital raised</p>
             </div>
   
             <div class="counter--content">
@@ -26,9 +26,9 @@
                 </svg>                                  
               </div>
               <div class="counter--content-percent">
-                <h2> <span class="counter--content-number">25</span>K+ </h2>
+                <h2> <span class="counter--content-number">100</span>+ </h2>
               </div>
-              <p class="bold">Properties for Buy <br> & sell Successfully</p>
+              <p class="bold">Available houses</p>
             </div>
   
             <div class="counter--content">
@@ -39,9 +39,9 @@
                 </svg>                                 
               </div>
               <div class="counter--content-percent">
-                <h2> <span class="counter--content-number">500</span> </h2>
+                <h2> <span class="counter--content-number">200</span> </h2>
               </div>
-              <p class="bold">Daily completed <br> transactions</p>
+              <p class="bold">Active matchings<br> made every day</p>
             </div>
   
             <div class="counter--content">
@@ -54,9 +54,9 @@
                 </svg>                 
               </div>
               <div class="counter--content-percent">
-                <h2> $<span class="counter--content-number">600</span>+ </h2>
+                <h2><span class="counter--content-number">280</span>+ </h2>
               </div>
-              <p class="bold">Reagular Clients</p>
+              <p class="bold">Early Users</p>
             </div>
   
           </div>
