--- a/templates/landlord/matches.html
+++ b/templates/landlord/matches.html
@@ -30,7 +30,7 @@
   Navigation Menu
   #############
   -->
-  {% include 'tenant/_header.html' with name1="Go to Profile" url1="tenant:profile" name2="Home" url2="tenant:matches" %}
+  {% include 'tenant/_header.html' with name1="Go to Profile" url1="landlord:profile" name2="Home" url2="landlord:houses" %}
   
   <section style="padding-top: 7.5rem;" class="properties" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">
     <div class="container">
