--- a/templates/tenant/housing.html
+++ b/templates/tenant/housing.html
@@ -91,7 +91,7 @@
                 </li>
               </ul>
               <div class="properties-card--footer d-flex align-items-center justify-content-between">
-                <a href="property-details.html" class="btn btn-small">View Details</a>
+                <a href="{% url 'tenant:view_house' 1 %}" class="btn btn-small">View Details</a>
                 <h5>$649,900</h5>
               </div>
             </div> 
@@ -156,7 +156,7 @@
                 </li>
               </ul>
               <div class="properties-card--footer d-flex align-items-center justify-content-between">
-                <a href="property-details.html" class="btn btn-small">View Details</a>
+                <a href="{% url 'tenant:view_house' 1 %}" class="btn btn-small">View Details</a>
                 <h5>$649,900</h5>
               </div>
             </div> 
@@ -221,7 +221,7 @@
                 </li>
               </ul>
               <div class="properties-card--footer d-flex align-items-center justify-content-between">
-                <a href="property-details.html" class="btn btn-small">View Details</a>
+                <a href="{% url 'tenant:view_house' 1 %}" class="btn btn-small">View Details</a>
                 <h5>$649,900</h5>
               </div>
             </div> 
