--- a/templates/index/_header.html
+++ b/templates/index/_header.html
@@ -40,66 +40,42 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" >
-                Home
-              </a>
-              <ul class="dropdown-menu" >
-                <li><a class="dropdown-item" href="index.html">Home v1</a></li>
-                <li><a class="dropdown-item" href="index2.html">Home v2</a></li>
-              </ul>
-            </li>
+            {% if page == 'index' %}
             <li class="nav-item">
-              <a class="nav-link" href="about.html">about</a>
+              <a class="nav-link" href="{% url 'index:about' %}">
+                About
+              </a>
             </li>
             
             <li class="nav-item">
-              <a class="nav-link " href="listing.html" >
-                Listings
+              <a class="nav-link " href="#feature">
+                Features
               </a>
             </li>
+            {% elif page == 'about' %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'index:index' %}">
+                Home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="#team">
+                Team
+              </a>
+            </li>
+            {% endif %}
   
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#"  data-bs-toggle="dropdown" >
-                Agents
+                Resources
               </a>
               <ul class="dropdown-menu" >
-                <li><a class="dropdown-item" href="agent.html">Agent List</a></li>
-                <li><a class="dropdown-item" href="agent-details.html">Agent Profile</a></li>
+                <li><a class="dropdown-item" target="_blank" href="https://www.grotn.com">Our Site</a></li>
+                <li><a class="dropdown-item" target="_blank" href="https://www.github.com/Project-Grot/GrotN">Our Code</a></li>
+                <li><a class="dropdown-item" target="_blank" href="https://www.notion.so/GrotN-76951c0da01b42b89ff14289b96fc1ee">Our Plans</a></li>
               </ul>
             </li>
             
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#"  data-bs-toggle="dropdown" >
-                Other pages 
-              </a>
-              <ul class="dropdown-menu megamenu" >
-                <li class="megamenu-item d-flex justify-content-between">
-                  <ul class="list-unstyled">
-                    <li><a href="blog.html" class="dropdown-item">Blog</a></li>
-                    <li><a href="blog-single.html" class="dropdown-item">Blog Single</a></li>
-                    <li><a href="contact.html" class="dropdown-item">Contact</a></li>
-                    <li><a href="privacy.html" class="dropdown-item">Privacy Policy</a></li>
-                    <li><a href="license.html" class="dropdown-item">License</a></li>
-                    <li><a href="{% url 'authentication:tenant-signin' %}" class="dropdown-item">Tenant Signin</a></li>
-                    <li><a href="{% url 'authentication:tenant-register' %}" class="dropdown-item">Tenant Register</a></li>
-                  </ul>
-                  <ul class="list-unstyled" >
-                    <li><a href="404.html" class="dropdown-item">404 Page</a></li>
-                    <li><a data-bs-toggle="modal" href="#otp" role="button" class="dropdown-item">Enter OTP</a></li>
-                    <li><a data-bs-toggle="modal" href="#newPassword" role="button" class="dropdown-item">New Password</a></li>
-                    <li><a data-bs-toggle="modal" href="#resetPassword" role="button" class="dropdown-item">Reset Password</a></li>
-                    <li><a data-bs-toggle="modal" href="#createAccount" role="button" class="dropdown-item">Create Account</a></li>
-                    <li><a href="{% url 'authentication:landlord-signin' %}" class="dropdown-item">Landlord Signin</a></li>
-                    <li><a href="{% url 'authentication:landlord-register' %}" class="dropdown-item">Landlord Register</a></li>
-                    {% if user.is_authenticated %}
-                        <p>Welcome, {{ user.username }}</p>
-                        <a href="{% url 'authentication:signout' %}">Logout</a>
-                    {% endif %}
-                  </ul>
-                </li>
-              </ul>
-            </li>
             <li class="nav-item d-none d-sm-inline-block d-lg-none">
               <a class="btn btn-small btn-outline" data-bs-toggle="modal" href="#login" role="button">Log In</a>
             </li>
@@ -113,4 +89,22 @@
       </div>
     </nav>
   </header>
-  
+  <script>
+    const featureLink = document.querySelector('a[href="#feature"]');
+    if (featureLink) {
+      featureLink.addEventListener('click', (e) => {
+        e.preventDefault();
+        const feature = document.getElementById('feature');
+        feature.scrollIntoView({ behavior: 'smooth' });
+      });
+    }
+    
+    const teamLink = document.querySelector('a[href="#team"]');
+    if (teamLink) {
+      teamLink.addEventListener('click', (e) => {
+        e.preventDefault();
+        const team = document.getElementById('team');
+        team.scrollIntoView({ behavior: 'smooth' });
+      });
+    }  
+  </script>
