worked on the logic for adding and editing houses for the landlord page

--- a/templates/about.html
+++ b/templates/about.html
@@ -139,15 +139,16 @@
             Our vision is simple.
           </h3>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-             In a free hour, On the other hand, we denounce with righteous 
-             indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment.
+            Carefully matching tenants with each other aiming to increase the rate of tenants per apartment.
+            While doing so, we are taking in the housing options of landlords who have been suffering from
+            real estate agents or independent sales. Thus, these unseen houses in the market are matched with
+            suitable tenants with high efficiency.
              <br><br>
-            In a free hour, On the other hand, we denounce with righteous indignation and dislike men .
+            This efficiency provided by our algorithm is what will mitigate the housing crisis.
           </p>
           <div class="company-vision--content--author">
-            <h6>Cagan Oflazoglu</h6>
-            <p>CEO at GrotN</p>
+            <h6>Alp Niksarli</h6>
+            <p>CTO at GrotN</p>
           </div>
         </div>
       </div>
