--- a/templates/landlord/new_house.html
+++ b/templates/landlord/new_house.html
@@ -46,69 +46,84 @@
           <p>Add a new house to your profile so that 
             suitable tenants can be matched with it.
           </p>
+            {% if error %}
+              {% for key, value in error.items %}
+                <p style="color: #ff3050 !important;" class="error-msg">
+                  {{ key }}: {{ value }}              
+                </p>
+              {% endfor %}
+            {% endif %}
         </div>
       </div>
     </div>
 
     <form class="contact-form-items"
           method="POST"
-          action="{% url 'tenant:profile' %}">
+          action="{% url 'landlord:new' %}">
         {% csrf_token %}
       <h4>House Information</h4>
       <div class="input-group">
         <span class="input-group-text" >
           <i class="ph-pen"></i>
         </span>
-        <input type="text" class="form-control" placeholder="Title">
+        <input type="text" class="form-control" placeholder="Title" name="title"
+            value="{{ house.title|default:'' }}">
       </div>
 
       <div class="input-group">
         <span class="input-group-text" >
           <i class="ph-money"></i>
         </span>
-        <input min="0" max="99999" type="number" class="form-control" placeholder="Price (€)" name="price">
+        <input min="0" max="99999" type="number" class="form-control" placeholder="Price (€)" name="price" required
+          value="{{ house.price|default:'' }}">
       </div>
 
       <div class="input-group">
         <span class="input-group-text" >
           <i class="ph-arrows-out"></i>
         </span>
-        <input min="0" max="10000" type="number" class="form-control" placeholder="Size (sq meters)" name="size">
+        <input min="0" max="10000" type="number" class="form-control" placeholder="Size (sq meters)" name="size" required
+        value="{{ house.square_feet|default:'' }}">
       </div>
 
       <div class="input-group">
         <span class="input-group-text" >
           <i class="ph-bed"></i>
         </span>
-        <input min="0" max="10" type="number" class="form-control" placeholder="# of Bedrooms" name="bedrooms">
+        <input min="0" max="10" type="number" class="form-control" placeholder="# of Bedrooms" name="bedrooms" required
+        value="{{ house.bedrooms|default:'' }}">
       </div>
 
       <div class="input-group">
         <span class="input-group-text" >
           <i class="ph-shower"></i>
         </span>
-        <input min="0" max="10" type="number" class="form-control" placeholder="# of Bathrooms" name="bathrooms">
+        <input min="0" max="10" type="number" class="form-control" placeholder="# of Bathrooms" name="bathrooms" required
+        value="{{ house.bathrooms|default:'' }}">
       </div>
 
       <div class="input-group">
         <span class="input-group-text" >
           <i class="ph-house"></i>
         </span>
-        <input type="text" class="form-control" placeholder="City">
+        <input type="text" class="form-control" placeholder="City" name="city" required
+        value="{{ house.city|default:'' }}">
       </div>
 
       <div class="input-group">
         <span class="input-group-text" >
           <i class="ph-house"></i>
         </span>
-        <input type="text" class="form-control" placeholder="District">
+        <input type="text" class="form-control" placeholder="District" name="district" required
+        value="{{ house.district|default:'' }}">
       </div>
 
       <div class="input-group">
         <span class="input-group-text" >
           <i class="ph-map-pin"></i>
         </span>
-        <input type="text" class="form-control" placeholder="Full Address">
+        <input type="text" class="form-control" placeholder="Full Address" name="address" required
+        value="{{ house.address|default:'' }}">
       </div>
 
       <div class="input-group">
@@ -124,7 +139,9 @@
 
       <div>
       <div class="input-group">
-        <textarea class="form-control" placeholder="More about the house.. (optional)" rows="15" cols="20"></textarea>
+        <textarea class="form-control" placeholder="More about the house.. (optional)" rows="15" cols="20" name="info"
+        value="{{ house.additional_info|default:'' }}">
+        </textarea>
       </div>
       <div class="w-100 contact-form-button content-center">
         <button type="submit" class="btn btn-large">Save</button>
